--- a/package.json
+++ b/package.json
@@ -11,16 +11,24 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "antd": "^5.19.1",
+    "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "react-verification-input": "^4.1.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
